Fixed profile on mobile screen

--- a/src/pages/Profile/Profile.scss
+++ b/src/pages/Profile/Profile.scss
@@ -7,7 +7,6 @@
     overflow: visible;
 
     &_info{
-        
         &_top{
             display: flex;
     
@@ -39,11 +38,22 @@
                 justify-content: space-between;
                 align-items: center;
                 align-self: flex-start;
-            
+                
+                @include screen() {
+                    flex-direction: column;
+                    max-height: 45px;
+                    margin-left: auto;
+                    width: auto;
+                }
+
                 &_elements {
                     display: flex;
                     align-items: center;
                     gap: 20px;
+
+                    @include screen() {
+                        gap: 10px;
+                    }
 
                     a {
                         background-color: var(--profile-button-background-color);
@@ -54,6 +64,10 @@
                     p {
                         color: var(--main-text-color);
                         font-size: 14px;
+
+                        @include screen() {
+                            font-size: 12px;
+                        }
                     }
                     
                     a:hover {
@@ -70,6 +84,13 @@
                     margin-right: 0;
                     border-radius: 8px;
                     
+                    @include screen() {
+                        bottom: 0;
+                        margin-top: 27px;
+                        margin-left: auto;
+                        font-size: 12px;
+                    }
+
                     &_quit{
                         color: var(--red-button-primary-color);
                         border: 1px solid var(--red-button-primary-color);
@@ -108,6 +129,7 @@
                 
                 @include screen() {
                     gap: 6px;
+                    margin-top: 10px;
                 }
                 
                 &_name  {
